<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:padding="15dp">


    <TextView
        android:id="@+id/deleteText"
        android:layout_width="263dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:ems="10"
        android:fontFamily="@font/avenir_book"
        android:hint="@string/delete_park"
        android:inputType="textPersonName"
        android:textColor="@android:color/white"
        android:textColorHint="#b5b5b5"
        android:textSize="20sp" />

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/noBtn"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_margin="10dp"
            android:background="@drawable/button_backgraund"
            android:fontFamily="@font/avenir_black"
            android:onClick="noBtn"
            android:text="@string/no"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/yesBtn"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_margin="10dp"
            android:background="@drawable/button_backgraund"
            android:fontFamily="@font/avenir_black"
            android:onClick="yesBtn"
            android:text="@string/yes"
            android:textColor="#FFFFFF" />


    </RelativeLayout>


</LinearLayout>